--- a/generate-gtfs/tsconfig.json
+++ b/generate-gtfs/tsconfig.json
@@ -5,7 +5,7 @@
       "preserveConstEnums": true,
       "noEmit": true,
       "sourceMap": false,
-      "module":"es2015",
+      "module":"ES2020",
       "moduleResolution":"node",
       "esModuleInterop": true, 
       "skipLibCheck": true,
