--- a/generate-gtfs/tsconfig.json
+++ b/generate-gtfs/tsconfig.json
@@ -4,12 +4,13 @@
       "strict": true,
       "preserveConstEnums": true,
       "noEmit": true,
-      "sourceMap": false,
-      "module":"ES2020",
-      "moduleResolution":"node",
+      "inlineSourceMap": true,
+      "module": "ES2020",
+      "noImplicitAny": true,
+      "moduleResolution": "node",
       "esModuleInterop": true, 
       "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true,  
+      "forceConsistentCasingInFileNames": true,
     },
     "exclude": ["node_modules", "**/*.test.ts"]
   }
